# attoparsec

./: .ghci  .gitignore  .hgignore  .hgtags  .hlint.yaml  .travis.yml  ByteStringParser.hs  README.markdown  README.md  attoparsec.cabal  bytestringparser.cabal  cabal.haskell-ci  changelog  changelog.md  stack.yaml
.github/workflows/: haskell-ci.yml
Data/: Attoparsec.hs
Data/Attoparsec/: ByteString.hs  Char8.hs  Char8Boilerplate.h  Combinator.hs  FastSet.hs  Incremental.hs  Internal.hs  Lazy.hs  Number.hs  Text.hs  Types.hs  Word8Boilerplate.h  Zepto.hs
Data/Attoparsec/ByteString/: Buffer.hs  Char8.hs  FastSet.hs  Fhthagn.hs  Internal.hs  Lazy.hs
Data/Attoparsec/Incremental/: Char8.hs
Data/Attoparsec/Internal/: Types.hs
Data/Attoparsec/Internal/ByteString/: Buffer.hs  FastSet.hs
Data/Attoparsec/Internal/Text/: Buffer.hs  FastSet.hs
Data/Attoparsec/Text/: Buffer.hs  FastSet.hs  Internal.hs  Lazy.hs
benchmarks/: Aeson.hs  Arse.hs  Arselet.hs  Benchmarks.hs  Common.hs  Genome.hs  Headers.hs  HeadersByteString.hs  HeadersText.hs  Links.hs  Makefile  Numbers.hs  Sets.hs  TextFastSet.hs  Tiny.hs  Warp.hs  attoparsec-benchmarks.cabal  http-request.txt  http-response.txt
benchmarks/HeadersByteString/: Atto.hs
benchmarks/Warp/: ReadInt.hs
benchmarks/warp-3.0.1.1/Network/Wai/Handler/Warp/: ReadInt.hs  RequestHeader.hs
cbits/: cbits.c
doc/: attoparsec-rewired-2.md  whats-in-a-parser-1.md
examples/: Makefile  Parsec_RFC2616.hs  RFC2616.hs  TestRFC2616.hs  attoparsec-examples.cabal  rfc2616.c
internal/Data/Attoparsec/ByteString/: Buffer.hs  FastSet.hs
internal/Data/Attoparsec/Text/: Buffer.hs
src/Data/ParserCombinators/: Attoparsec.hs  ByteStringParser.hs
src/Data/ParserCombinators/Attoparsec/: Char8.hs  Combinator.hs  FastSet.hs  Incremental.hs  Internal.hs  Word8Boilerplate.h
src/Data/ParserCombinators/Attoparsec/Incremental/: Char8.hs
src/Data/ParserCombinators/ByteStringParser/: Char8.hs  FastSet.hs  Internal.hs
src/Text/ParserCombinators/: ByteStringParser.hs
src/Text/ParserCombinators/ByteStringParser/: FastSet.hs
tests/: Makefile  QC.hs  QCSupport.hs  TestFastSet.hs
tests/QC/: Buffer.hs  ByteString.hs  Combinator.hs  Common.hs  Rechunked.hs  Simple.hs  Text.hs
tests/QC/IPv6/: Internal.hs  Types.hs
tests/QC/Text/: FastSet.hs  Regressions.hs
