name:            attoparsec
version:         0.9.1.2
license:         BSD3
license-file:    LICENSE
category:        Text, Parsing
author:          Bryan O'Sullivan <bos@serpentine.com>
maintainer:      Bryan O'Sullivan <bos@serpentine.com>
stability:       experimental
tested-with:     GHC == 6.10.4, GHC == 6.12.3, GHC == 7.0.3
synopsis:        Fast combinator parsing for bytestrings
cabal-version:   >= 1.6
homepage:        https://github.com/bos/attoparsec
bug-reports:     https://github.com/bos/attoparsec/issues
build-type:      Simple
description:
    A fast parser combinator library, aimed particularly at dealing
    efficiently with network protocols and complicated text/binary
    file formats.
extra-source-files:
    README.markdown
    benchmarks/Makefile
    benchmarks/Tiny.hs
    benchmarks/med.txt.bz2
    tests/Makefile
    tests/QC.hs
    tests/QCSupport.hs
    tests/TestFastSet.hs
    examples/Makefile
    examples/Parsec_RFC2616.hs
    examples/RFC2616.hs
    examples/TestRFC2616.hs
    examples/rfc2616.c

Flag developer
  Description: Whether to build the library in development mode
  Default: False

library
  build-depends: base >= 3 && < 5,
                 bytestring,
                 containers,
                 deepseq

  extensions:      CPP
  exposed-modules: Data.Attoparsec
                   Data.Attoparsec.Char8
                   Data.Attoparsec.Combinator
                   Data.Attoparsec.FastSet
                   Data.Attoparsec.Lazy
                   Data.Attoparsec.Number
                   Data.Attoparsec.Zepto
  other-modules:   Data.Attoparsec.Internal
                   Data.Attoparsec.Internal.Types
  ghc-options:     -Wall

  if flag(developer)
    ghc-prof-options: -auto-all

source-repository head
  type:     git
  location: https://github.com/bos/attoparsec

source-repository head
  type:     mercurial
  location: https://bitbucket.org/bos/attoparsec
