-- These benchmarks are not intended to be installed.
-- So don't install 'em.

name: attoparsec-benchmarks
version: 0
cabal-version: >=1.6
build-type: Simple

executable attoparsec-benchmarks
  main-is: Benchmarks.hs
  other-modules:
    HeadersByteString
    HeadersText
    Links
    Numbers
  hs-source-dirs: .. .
  ghc-options: -O2 -Wall
  build-depends:
    array,
    base == 4.*,
    bytestring,
    criterion >= 0.5,
    deepseq >= 1.1,
    parsec >= 3.1.2,
    scientific,
    text
