-- These benchmarks are not intended to be installed.
-- So don't install 'em.

name: attoparsec-benchmarks
version: 0
cabal-version: >=1.6
build-type: Simple

executable attoparsec-benchmarks
  main-is: Benchmarks.hs
  other-modules:
    Common
    HeadersByteString
    HeadersText
    Links
    Numbers
  hs-source-dirs: .. .
  ghc-options: -O2 -Wall
  build-depends:
    array,
    base == 4.*,
    bytestring >= 0.10.4.0,
    criterion >= 0.8.1.0,
    deepseq >= 1.1,
    directory,
    filepath,
    parsec >= 3.1.2,
    scientific >= 0.3.1,
    text >= 1.1.1.0,
    unordered-containers,
    vector
